# diploma_toir

./: README.md  database_schema.md  diploma.tex  docker-compose.yml  project_implementation_plan.md
api-gateway/: Dockerfile
init-scripts/: 00-create-schemas.sql  01-references-schema.sql  02-planning-schema.sql  03-execution-schema.sql  04-inventory-schema.sql  05-analytics-schema.sql
service-p1/: Dockerfile
service-p1/src/: README.md  go.mod
service-p1/src/cmd/: main.go
service-p1/src/configs/: config.yaml
service-p1/src/data/: example.csv  example.xml
service-p1/src/internal/model/: aircraft.go
service-p1/src/internal/parser/: aircraft_data_parser.go
service-p1/src/pkg/config/: config.go
service-p1/src/pkg/converter/: converter.go
service-p2/: Dockerfile
service-p2/src/: go.mod
service-p2/src/cmd/: main.go
service-p2/src/configs/: config.yaml
service-p2/src/internal/model/: maintenance_schedule.go
service-p3/: Dockerfile
service-p3/src/: CMakeLists.txt
service-p3/src/config/: config.json
service-p3/src/include/model/: TaskExecution.h
service-p3/src/src/: main.cpp
service-p4/: Dockerfile
service-p4/src/: CMakeLists.txt
service-p4/src/config/: config.json
service-p4/src/include/model/: InventoryItem.h
service-p4/src/src/: main.cpp
service-p5/: Dockerfile
service-p5/src/: go.mod
service-p5/src/cmd/: main.go
service-p5/src/configs/: config.yaml
service-p5/src/internal/model/: report.go
web-client/: Dockerfile  README.md  index.html  nginx.conf
web-client/css/: styles.css
web-client/js/: api.js  main.js
